test/sema/typeck/pattern/struct-named-expected.out
error: Expected named pattern field.
--> struct-named-expected.dora:3:13
 | struct Foo { a: Int, b: Int }
 | fn f(x: Foo): Int {
 |     let Foo(1, a, b) = x;
               ~
 |     a
 | }
1 error found.
