test/sema/typeck/pattern/struct-named-expected.dora
struct Foo { a: Int, b: Int }
fn f(x: Foo): Int {
    let Foo(1, a, b) = x;
    a
}
